src/objects/College__c.object
<CustomObject>
    <fields>
        <fullName>CollegeCourses__c</fullName>
        <label>CollegeCourses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>EEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollegeOpt2__c</fullName>
        <label>CollegeOpt2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalTestValueSet1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollegeOpt3__c</fullName>
        <label>CollegeOpt3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalPickListTest2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollegeOpt4__c</fullName>
        <label>CollegeOpt4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalPickListTest3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollegeP1__c</fullName>
        <label>CollegeP1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>aaaa</fullName>
                </value>
                <value>
                    <fullName>bbbb</fullName>
                </value>
                <value>
                    <fullName>ccccc</fullName>
                </value>
                <value>
                    <fullName>dddd</fullName>
                </value>
                <value>
                    <fullName>eeee</fullName>
                </value>
                <value>
                    <fullName>ffffff</fullName>
                </value>
                <value>
                    <fullName>ggggg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollegeP2__c</fullName>
        <label>CollegeP2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1111</fullName>
                </value>
                <value>
                    <fullName>222</fullName>
                </value>
                <value>
                    <fullName>333</fullName>
                </value>
                <value>
                    <fullName>44444</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollegeP44__c</fullName>
        <label>CollegeP44</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sfadf</fullName>
                </value>
                <value>
                    <fullName>sdfa</fullName>
                </value>
                <value>
                    <fullName>aasfds</fullName>
                </value>
                <value>
                    <fullName>fasdf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklistFieldMulti1__c</fullName>
        <label>PicklistFieldMulti1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>aaaa</fullName>
                </value>
                <value>
                    <fullName>bbbb</fullName>
                </value>
                <value>
                    <fullName>ccccc</fullName>
                </value>
                <value>
                    <fullName>dddd</fullName>
                </value>
                <value>
                    <fullName>eeded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>College</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>College Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>College</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>